# floating-clock

./: index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build.yml
src/: alarm.ts  clock.ts  index.html  main.ts  settings.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: alarm.rs  lib.rs  main.rs  store.rs  tray.rs  window.rs
tests/: alarm.test.ts  clock.test.ts
