[package]
name = "floating-clock"
version = "1.0.0"
edition = "2021"
rust-version = "1.75"
build = "build.rs"

[lib]
name = "floating_clock_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "floating-clock"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
chrono = "0.4"

[dependencies.tauri-plugin-store]
git = "https://github.com/tauri-apps/plugins-workspace"
branch = "v2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
